gobmkida/c2/owl_determine_life
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_determine_life/src/engine/owl.c:2814:7: error: conflicting types for 'owl_determine_life'
void  owl_determine_life( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_determine_life/src/engine/owl.c:159:13: note: previous declaration is here
static void owl_determine_life(struct local_owl_data *owl,
            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_determine_life/src/engine/owl.c:2971:5: error: assigning to 'struct eyevalue' from incompatible type 'int'
*v9 = 0; 
    ^ ~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_determine_life/src/engine/owl.c:3010:28: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v21 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v20); 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_determine_life/src/engine/owl.c:3196:4: error: use of undeclared identifier 'byte_9B389F'
|| byte_9B389F[vital_point] != 3 && owl->goal[vital_point - 1] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_determine_life/src/engine/owl.c:3197:4: error: use of undeclared identifier 'byte_9B388C'
|| byte_9B388C[vital_point] != 3 && owl->goal[vital_point - 20] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_determine_life/src/engine/owl.c:3343:4: error: expected expression
&& ::does_attack( libs[0], ( int)heye) 
   ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_determine_life/src/obj/1/owl.o] Error 1
